# RagBot

./: .env  .envrc  .gitignore  Dockerfile.chat  Dockerfile.llm  FAQ-Pid.txt  FAQ.csv  FAQ.txt  README.md  ReadMe.md  api.py  config.py  contextual.py  core.py  dockercompose.yaml  hermex.py  hermex.txt  playground HR.ipynb  playground.ipynb  playground_2.ipynb  presentation.ipynb  pyproject.toml  requirements.txt  strmlt.py  strmlt_v2.py  test.py  test_2.py  test_3.py  trial.py  ui.py
.streamlit/: secrets.toml
Data/: FAQ data.txt  TPD data.txt
